# health-skill

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
assets/: visit_brief_template.md
demo/: demo.tape
docs/: commands.md  files.md  setup-guide.md
examples/demo-karen/: .last_session  ASSISTANT_UPDATE.md  CARE_STATUS.md  HEALTH_CHANGE_REPORT.md  HEALTH_DOSSIER.md  HEALTH_HOME.html  HEALTH_HOME.md  HEALTH_PATTERNS.md  HEALTH_PROFILE.json  HEALTH_SUMMARY.md  HEALTH_TRENDS.md  (+11 more)
hooks/: health-auto-ingest.py  health-file-ingest.py  install.sh
references/: cowork-tutorial.md  integration-points.md  photo-handling.md  safety-protocol.md  wearable-sync.md  workspace-schema.md
scripts/: APPLE_OCR_README.md  apple_ocr.swift  appointments.py  artifacts.py  care_workspace.py  caregiver_dashboard.py  checkins.py  clinician_handoff.py  commands.py  connections.py  cycles.py  decisions.py  extraction.py  fhir_import.py  forecasting.py  goals.py  greeting.py  household.py  html_report.py  interactions.py  lab_actions.py  lab_ranges.py  menopause.py  mens_health.py  mental_health.py  monthly_report.py  nudges.py  nutrition.py  onboarding.py  pharmacogenomics.py  post_visit.py  preventive.py  providers.py  recap.py  rendering.py  side_effects.py  training.py  triage.py  wearable_import.py  wearable_sync.py  (+1 more)
tasks/: plan.md
tests/: test_care_workspace.py  test_edge_cases.py  test_html_report.py  test_improvements.py  test_pgx_coverage.py  test_pgx_redteam.py  test_v18.py  test_v19_v20.py  test_v22.py  test_v221.py  test_v25_v26.py
(+5 files in other folders)
